# GreedyPerspectives

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bitbucket-pipelines.yml  pre-commit-config.yaml  vcpkg.json
docker/: my.dockerfile
include/: Actor.h  Agent.h  BEVRenderer.h  Camera.h  Config.h  CoveragePlanner.h  CoverageRenderer.h  Entity.h  GLHelpers.h  Geometry.h  Logging.h  MapGenerator.h  Model.h  Solver.h  Space.h  Visualizer.h  World.h
libs/imgui_impl/: CMakeLists.txt
res/: basic.shader  example.yaml  formation.yaml  map.shader  texture.shader
res/experiments/corridor/: form.yaml  map.npy  nocol.yaml  rr.yaml  seq.yaml  starts.csv
res/experiments/forest/: form.yaml  map.npy  nocol.yaml  rr.yaml  seq.yaml  starts.csv
res/experiments/large/: form.yaml  map.npy  nocol.yaml  rr.yaml  seq.yaml  starts.csv
res/experiments/merge/: form.yaml  map.npy  nocol.yaml  rr.yaml  seq.yaml  starts.csv
res/experiments/split/: form.yaml  map.npy  nocol.yaml  rr.yaml  seq.yaml  starts.csv
scripts/: format-code.sh  gen_results_csv.py  gen_starts.py  merge_results.py  rr_time_fig.py  run_exps.py  tmp_map.py  vcpkg.py
src/: main.cpp
src/geometry/: Camera.cpp  Geoemtry.cpp
src/planner/: CoveragePlanner.cpp
src/renderer/: BEVRenderer.cpp  CoverageRenderer.cpp
src/solver/: Model.cpp  Solver.cpp  Space.cpp
src/utils/: Config.cpp  Visualizer.cpp
src/world/: Actor.cpp  Agent.cpp  Entity.cpp  MapGenerator.cpp  World.cpp
test/: CMakeLists.txt  ConfigTests.cpp  GeometryTests.cpp  MapGeneratorTests.cpp  ModelTests.cpp  SpaceTests.cpp
